[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus = "2.2.3"
crossbeam-channel = "0.5.2"
zmq = "0.9"
serde_json = "1.0"
log = { version = "0.4" } # , features = ["kv_unstable"] }